@@ -39,18 +39,22 @@ RESTRICT="strip"
 DEPEND="app-shells/tcsh"
 RDEPEND="${DEPEND}
 	app-editors/nedit
-	dev-lang/tk
 	dev-tcltk/blt
 	media-fonts/font-sun-misc
 	!sci-chemistry/sparta+
 	!sci-chemistry/talos+
 	sys-libs/ncurses
 	x11-apps/xset
-	x11-libs/libX11
 	|| ( x11-libs/xview x11-libs/xview-bin )
-	amd64? (
-		app-emulation/emul-linux-x86-baselibs
-		app-emulation/emul-linux-x86-xlibs
+	|| (
+		(
+			dev-lang/tk[abi_x86_32(-)]
+			x11-libs/libX11[abi_x86_32(-)]
+		)
+		(
+			app-emulation/emul-linux-x86-baselibs[-abi_x86_32(-)]
+			app-emulation/emul-linux-x86-xlibs[-abi_x86_32(-)]
+		)
 	)
 	prefix? ( dev-util/patchelf )"
 
