@@ -1,6 +1,10 @@
 # ChangeLog for sci-chemistry/nmrpipe
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  04 Jul 2014; Justin Lecher <jlec@gentoo.org>
+  nmrpipe-8.1.2013.218.23.09-r1.ebuild:
+  Fix emul-linux deps for modern multilib
 
   28 Oct 2013; Justin Lecher <jlec@gentoo.org>
   -nmrpipe-8.1.2013.218.23.09.ebuild, +nmrpipe-8.1.2013.218.23.09-r1.ebuild,
